Apply correct spacing between elements

--- a/style.css
+++ b/style.css
@@ -25,6 +25,22 @@ main {
   justify-content: space-between;
 }
 
+.product-img {
+  margin-bottom: 24px;
+}
+
+.product-title {
+  margin-bottom: 16px;
+}
+
+.product-desc {
+  margin-bottom: 24px;
+}
+
+.stats {
+  margin-bottom: 24px;
+}
+
 /* == TYPOGRAPHY == */
 
 @font-face {
@@ -82,6 +98,11 @@ main {
 }
 
 /* == CREATOR == */
+
+.creator {
+  border-top: 1px solid #2E405A;
+  padding-top: 16px;
+}
 
 .creator-avatar {
   width: 32px;
